# skills

./: .gitignore  README.md
companies-house-diligence/: SKILL.md  pyproject.toml  requirements.txt
companies-house-diligence/Documentation/: README.md
companies-house-diligence/Documentation/Companies House Document API/: README.md
companies-house-diligence/Documentation/Companies House Document API/Document Location/: Fetch a Document.md  Overview.md
companies-house-diligence/Documentation/Companies House Document API/Document Metadata/: Fetch a Documents Metadata.md  Overview.md
companies-house-diligence/Documentation/Companies House Public Data API/: README.md
companies-house-diligence/Documentation/Companies House Public Data API/Charges/: Get.md  List.md  Overview.md
companies-house-diligence/Documentation/Companies House Public Data API/Company Profile/: Get.md  Overview.md
companies-house-diligence/Documentation/Companies House Public Data API/Exemptions/: Get.md  Overview.md
companies-house-diligence/Documentation/Companies House Public Data API/Filing History/: Filing History Item Resource.md  List.md  Overview.md
companies-house-diligence/Documentation/Companies House Public Data API/Insolvency/: Get.md  Overview.md
companies-house-diligence/companies_house_diligence/: __init__.py  accounts.py  asciify.py  brief.py  cli.py  client.py  discover.py  enrich.py  graph.py  plain.py  scrape.py  viz.py
companies-house-diligence/docx-build/: build.sh  figure-img.lua  patch-reference.py  reference.docx  sections.lua  table-width.lua  titlepage.lua
(+36 files in other folders)
